--- a/src/posts/0001.md
+++ b/src/posts/0001.md
@@ -1,15 +1,91 @@
 ---
-title: "0001, Let me introduce myself!"
-date: "2022-09-20"
-tags: ["svelteKit", "blog", "code"]
+title: "Setting up a Next 13 app with Amplify and User Authentication"
+date: "2023-09-26"
+tags: ["Next13", "Amplify", "AWS", "javascript", "tutorial"]
 ---
 
-My Name is Zac, and I'm a developer from Upstate, NY. I have dabbled in web
-development since I was a teen in the early 20-oughts. 
-## Introduction
+## AWS Guide Supplement
 
-This post is mainly about SvelteKit and how awesome it is.
+This post is meant as a supplement to the AWS official guide on [Deploy a Next.js 13 app with authentication to AWS Amplify](https://aws.amazon.com/blogs/mobile/deploy-a-next-js-13-app-with-authentication-to-aws-amplify/). If you've reached the third step of the guide and have run `npm install aws-amplify @aws-amplify/ui-react`, follow these next steps.
 
-## Conclusion
+## Adjust Directory and Paths to Work with Original Guide
 
-That's all for now. Stay tuned for more!
+> **Note**: I recommend using Next.js `pages/` routing as it's more widely documented than the new `app/` routing method.
+
+- Delete the `src/app` folder.
+- Create `src/pages/_app.js` and paste the contents from the AWS tutorial.
+- Create `src/pages/index.js` and paste the contents from the AWS tutorial.
+- On line 3 of `_app.js`, ensure your import for `aws-exports.js` is correct.
+- Create `src/styles/global.css`.
+
+## Set Up Git
+
+1. Initialize Git by running `git init` in your terminal. Ensure you are in the correct directory.
+2. Stage your files by running `git add .`.
+3. Make your first commit by running `git commit -m "first commit"`.
+
+> For this short tutorial, we'll use GitHub. Log in to your GitHub account and create a new repository without a README or `.gitignore` file.
+
+```bash
+git remote add origin https://github.com/{your-username}/{your-repo-name}.git
+git branch -M main
+git push -u origin main
+```
+
+## Create Protected Routes
+
+We may want certain information to be available to everyone while protecting specific features for members only. To achieve this, create the following:
+
+- `src/components/layouts/PublicLayout.js`
+- `src/components/layouts/MemberLayout.js`
+
+### Public Layout
+
+```javascript
+// src/components/layouts/PublicLayout.js
+
+import Navigation from "@ui/Navigation";
+
+function Layout({ children }) {
+  return (
+    <div>
+      <Navigation />
+      <div>
+        <main>{children}</main>
+      </div>
+      <footer>{/* Your footer content */}</footer>
+    </div>
+  );
+}
+
+export default Layout;
+```
+
+### Member Layout
+
+```javascript
+// src/components/layouts/MemberLayout.js
+
+import { withAuthenticator } from "@aws-amplify/ui-react";
+
+function MemberLayoutContent({ children }) {
+  return (
+    <div>
+      <header>Member Header</header>
+      <main>{children}</main>
+      <footer>Member Footer</footer>
+    </div>
+  );
+}
+
+const MemberLayout = withAuthenticator(MemberLayoutContent);
+export default MemberLayout;
+```
+
+To protect an entire route or a specific component, use the following code:
+
+```javascript
+const yourProtectedComponent = withAuthenticator(yourProtectedComponentContent);
+export default yourProtectedComponent;
+```
+
