--- a/src/posts/0002.md
+++ b/src/posts/0002.md
@@ -1,37 +1,83 @@
 ---
-title: "0002, working with Code Blocks in Markdown"
-date: "2022-10-23"
-tags: ["markdown", "code", "tutorial"]
+title: "Create custom parsing rules using Mdsvex"
+date: "2023-09-28"
+tags: ["markdown","mdsvex", "rehype", "javascript", "code", "tutorial", "prismjs", "svelte-kit", "svelte"]
 ---
 
-In this post, we'll explore how to include code blocks in Markdown files.
 
-## Including a Code Block
+For this website, I use a tool called [prismjs](https://prismjs.com/) to do all 
+my syntax highlighting. Since I use Svelte-Kit with `.md` files and mdsvex parsing
+library to populate the posts, I was presented with some challenges to actually making it work. 
 
-You can include code blocks in Markdown by wrapping your code with triple backticks. You can also specify the programming language immediately after the first set of backticks for syntax highlighting.
+## Streamlined Steps to Create a SvelteKit Project with Custom Rehype Plugin
 
-Here's an example in JavaScript:
-<pre>
+1. **Initialize a new SvelteKit Project**
 
-``` javascript
-</pre>
-```
-export async function load({ params }) {
-	const post = await import(`../../../code-posts/${params.slug}.md`);
-	const { title, date } = post.metadata;
-	const content = post.default;
+    ```bash
+    npm init svelte@next my-sveltekit-project
+    cd my-sveltekit-project
+    ```
 
-	return {
-		content,
-		title,
-		date
-	};
-}
-```
-<pre>
-```
-</pre>
+2. **Install Dependencies**
 
-## Conclusion
+    ```bash
+    npm install mdsvex unist-util-visit
+    ```
 
-Including code blocks in your Markdown files is straightforward and enhances the readability of your technical posts.
+3. **Create the Custom Rehype Plugin**
+
+    Create a new file named `rehype-inline-code.js` in the root directory of your project.
+
+    ```js
+    // rehype-inline-code.js
+    import { visit } from 'unist-util-visit';
+
+    export default () => {
+      return (tree) => {
+        visit(tree, 'element', (node) => {
+          if (node.tagName === 'code' && !node.properties.className) {
+            node.properties.className = ['language-js'];
+          }
+        });
+      };
+    };
+    ```
+	Of course, you can set it to any language you want. We don't have to worry
+	about the triple backticks always being `language-js` becuase you can denote
+	the language like this:
+	```
+	\```javascript
+		console.log(foo);
+	\```
+	```
+		
+
+4. **Update Svelte Config**
+
+    Edit your `svelte.config.js` to include the rehype plugin.
+
+    ```javascript
+    // svelte.config.js
+    import { mdsvex } from 'mdsvex';
+    import rehypeInlineCode from './rehype-inline-code.js';
+
+    const config = {
+      extensions: ['.svelte', '.md'],
+      preprocess: [
+        mdsvex({
+          extensions: ['.md'],
+          remarkPlugins: [],
+          rehypePlugins: [rehypeInlineCode]
+        })
+      ],
+      // ... other SvelteKit configurations
+    };
+
+    export default config;
+    ```
+
+5. **Run the Development Server**
+
+    ```bash
+    npm run dev
+    ```
