--- a/src/posts/0001.md
+++ b/src/posts/0001.md
@@ -1,30 +1,29 @@
 ---
 title: "Setting up a Next 13 app with Amplify and User Authentication"
 date: "2023-09-26"
-tags: ["Next13", "Amplify", "AWS", "javascript", "tutorial"]
+tags: ["Next13", "Amplify", "AWS", "JavaScript", "tutorial"]
 ---
-
 ## AWS Guide Supplement
+---
+This tutorial serves as a supplement to the official [AWS guide on deploying a Next.js 13 app with authentication to AWS Amplify](https://aws.amazon.com/blogs/mobile/deploy-a-next-js-13-app-with-authentication-to-aws-amplify/). If you've completed up to the third step of the AWS guide and have run `npm install aws-amplify @aws-amplify/ui-react`, you can proceed with the following steps.
 
-This post is meant as a supplement to the AWS official guide on [Deploy a Next.js 13 app with authentication to AWS Amplify](https://aws.amazon.com/blogs/mobile/deploy-a-next-js-13-app-with-authentication-to-aws-amplify/). If you've reached the third step of the guide and have run `npm install aws-amplify @aws-amplify/ui-react`, follow these next steps.
-
-## Adjust Directory and Paths to Work with Original Guide
-
-> **Note**: I recommend using Next.js `pages/` routing as it's more widely documented than the new `app/` routing method.
-
+## Directory Structure and Path Adjustments
+---
+> **Note**: This tutorial recommends using Next.js' `pages/` routing, as it is more widely documented compared to the new `app/` routing method.
 - Delete the `src/app` folder.
-- Create `src/pages/_app.js` and paste the contents from the AWS tutorial.
-- Create `src/pages/index.js` and paste the contents from the AWS tutorial.
-- On line 3 of `_app.js`, ensure your import for `aws-exports.js` is correct.
-- Create `src/styles/global.css`.
+- Create a new file `src/pages/_app.js` and paste the AWS tutorial content into it.
+- Create another new file `src/pages/index.js` and paste the AWS tutorial content into it.
+- Ensure that the import statement for `aws-exports.js` on line 3 of `_app.js` is correct.
+- Create a new file `src/styles/global.css`.
 
-## Set Up Git
+## Git Setup
+---
+1. Open your terminal and navigate to your project directory.
+2. Initialize a new Git repository with `git init`.
+3. Stage your changes with `git add .`.
+4. Commit your changes with `git commit -m "first commit"`.
 
-1. Initialize Git by running `git init` in your terminal. Ensure you are in the correct directory.
-2. Stage your files by running `git add .`.
-3. Make your first commit by running `git commit -m "first commit"`.
-
-> For this short tutorial, we'll use GitHub. Log in to your GitHub account and create a new repository without a README or `.gitignore` file.
+> **GitHub**: For this tutorial, we'll use GitHub. Log in to your GitHub account and create a new repository. Do not include a README or `.gitignore` file.
 
 ```bash
 git remote add origin https://github.com/{your-username}/{your-repo-name}.git
@@ -32,21 +31,47 @@ git branch -M main
 git push -u origin main
 ```
 
-## Create Protected Routes
+## Implementing Protected Routes
+---
+We'll modify the `_app.js` file to conditionally apply layouts based on the route. Routes starting with `/member` will be automatically protected.
 
-We may want certain information to be available to everyone while protecting specific features for members only. To achieve this, create the following:
+### Update `_app.js`
+```javascript
+// File: src/pages/_app.js
+import "@aws-amplify/ui-react/styles.css"
+import { Amplify } from "aws-amplify"
+import awsExports from "../aws-exports"
+import "../styles/globals.css"
+import PublicLayout from "../components/layouts/PublicLayout"
+import MemberLayout from "../components/layouts/MemberLayout"
 
+Amplify.configure({ ...awsExports, ssr: true })
+
+function MyApp({ Component, pageProps, router }) {
+  const isMemberRoute = router.pathname.startsWith("/member");
+  let Layout = isMemberRoute ? MemberLayout : PublicLayout;
+  return (
+    <Layout>
+      <Component {...pageProps} />
+    </Layout>
+  );
+}
+export default MyApp;
+```
+
+### Create Layouts
+Create the following layout components:
+- `src/components/layouts/CommonLayout.js`
 - `src/components/layouts/PublicLayout.js`
 - `src/components/layouts/MemberLayout.js`
 
-### Public Layout
+### Update `CommonLayout.js`
+Paste code into file:
 
 ```javascript
-// src/components/layouts/PublicLayout.js
-
 import Navigation from "@ui/Navigation";
 
-function Layout({ children }) {
+function CommonLayout({ children }) {
   return (
     <div>
       <Navigation />
@@ -57,35 +82,40 @@ function Layout({ children }) {
     </div>
   );
 }
-
-export default Layout;
+export default CommonLayout;
 ```
 
-### Member Layout
+### Update `PublicLayout.js`
+Paste code into file:
+```javascript
+import CommonLayout from "./CommonLayout";
+
+function PublicLayout({ children }) {
+  return <CommonLayout>{children}</CommonLayout>;
+}
+export default PublicLayout;
+```
+
+### Update `MemberLayout.js`
+Paste code into file:
 
 ```javascript
-// src/components/layouts/MemberLayout.js
-
 import { withAuthenticator } from "@aws-amplify/ui-react";
+import CommonLayout from "./CommonLayout";
 
 function MemberLayoutContent({ children }) {
-  return (
-    <div>
-      <header>Member Header</header>
-      <main>{children}</main>
-      <footer>Member Footer</footer>
-    </div>
-  );
+  return <CommonLayout>{children}</CommonLayout>;
 }
-
 const MemberLayout = withAuthenticator(MemberLayoutContent);
 export default MemberLayout;
 ```
 
-To protect an entire route or a specific component, use the following code:
+## Protecting Individual Components
+To protect a specific component, you can use the `withAuthenticator` HOC as shown below:
 
 ```javascript
 const yourProtectedComponent = withAuthenticator(yourProtectedComponentContent);
 export default yourProtectedComponent;
 ```
 
+By doing this, you are essentially creating a new component (`yourProtectedComponent`) that includes the authentication functionality. You then export this new component so it can be used in your application.
