--- a/src/posts/0001.md
+++ b/src/posts/0001.md
@@ -5,7 +5,11 @@ tags: ["Next13", "Amplify", "AWS", "JavaScript", "tutorial"]
 ---
 ## AWS Guide Supplement
 ---
-This tutorial serves as a supplement to the official [AWS guide on deploying a Next.js 13 app with authentication to AWS Amplify](https://aws.amazon.com/blogs/mobile/deploy-a-next-js-13-app-with-authentication-to-aws-amplify/). If you've completed up to the third step of the AWS guide and have run `npm install aws-amplify @aws-amplify/ui-react`, you can proceed with the following steps.
+This tutorial serves as a supplement to the official [AWS guide on deploying a Next.js 13 app with authentication to AWS Amplify](https://aws.amazon.com/blogs/mobile/deploy-a-next-js-13-app-with-authentication-to-aws-amplify/). If you've completed up to the third step of the AWS guide and have run 
+```
+npm install aws-amplify @aws-amplify/ui-react
+```
+you can proceed with the following steps.
 
 ## Directory Structure and Path Adjustments
 ---
@@ -61,10 +65,11 @@ export default MyApp;
 
 ### Create Layouts
 Create the following layout components:
-- `src/components/layouts/CommonLayout.js`
-- `src/components/layouts/PublicLayout.js`
-- `src/components/layouts/MemberLayout.js`
-
+```
+src/components/layouts/CommonLayout.js
+src/components/layouts/PublicLayout.js
+src/components/layouts/MemberLayout.js
+```
 ### Update `CommonLayout.js`
 Paste code into file:
 
