--- a/src/posts/0001.md
+++ b/src/posts/0001.md
@@ -4,16 +4,23 @@ date: "2023-09-26"
 tags: ["Next13", "Amplify", "AWS", "JavaScript", "tutorial"]
 ---
 ## AWS Guide Supplement
+
 ---
-This tutorial serves as a supplement to the official [AWS guide on deploying a Next.js 13 app with authentication to AWS Amplify](https://aws.amazon.com/blogs/mobile/deploy-a-next-js-13-app-with-authentication-to-aws-amplify/). If you've completed up to the third step of the AWS guide and have run 
+
+This tutorial serves as a supplement to the official [AWS guide on deploying a Next.js 13 app with authentication to AWS Amplify](https://aws.amazon.com/blogs/mobile/deploy-a-next-js-13-app-with-authentication-to-aws-amplify/). If you've completed up to the third step of the AWS guide and have run
+
 ```
 npm install aws-amplify @aws-amplify/ui-react
 ```
+
 you can proceed with the following steps.
 
 ## Directory Structure and Path Adjustments
+
 ---
+
 > **Note**: This tutorial recommends using Next.js' `pages/` routing, as it is more widely documented compared to the new `app/` routing method.
+
 - Delete the `src/app` folder.
 - Create a new file `src/pages/_app.js` and paste the AWS tutorial content into it.
 - Create another new file `src/pages/index.js` and paste the AWS tutorial content into it.
@@ -21,7 +28,9 @@ you can proceed with the following steps.
 - Create a new file `src/styles/global.css`.
 
 ## Git Setup
+
 ---
+
 1. Open your terminal and navigate to your project directory.
 2. Initialize a new Git repository with `git init`.
 3. Stage your changes with `git add .`.
@@ -36,10 +45,13 @@ git push -u origin main
 ```
 
 ## Implementing Protected Routes
+
 ---
+
 We'll modify the `_app.js` file to conditionally apply layouts based on the route. Routes starting with `/member` will be automatically protected.
 
 ### Update `_app.js`
+
 ```javascript
 // File: src/pages/_app.js
 import "@aws-amplify/ui-react/styles.css"
@@ -52,70 +64,117 @@ import MemberLayout from "../components/layouts/MemberLayout"
 Amplify.configure({ ...awsExports, ssr: true })
 
 function MyApp({ Component, pageProps, router }) {
-  const isMemberRoute = router.pathname.startsWith("/member");
-  let Layout = isMemberRoute ? MemberLayout : PublicLayout;
-  return (
-    <Layout>
-      <Component {...pageProps} />
-    </Layout>
-  );
+	const isMemberRoute = router.pathname.startsWith("/member")
+	let Layout = isMemberRoute ? MemberLayout : PublicLayout
+
+	return (
+		<Layout {...pageProps}>
+			<Component {...pageProps} />
+		</Layout>
+	)
 }
-export default MyApp;
+
+export default MyApp
+
 ```
 
 ### Create Layouts
+
 Create the following layout components:
+
 ```
 src/components/layouts/CommonLayout.js
 src/components/layouts/PublicLayout.js
 src/components/layouts/MemberLayout.js
 ```
+
 ### Update `CommonLayout.js`
+
 Paste code into file:
 
 ```javascript
-import Navigation from "@ui/Navigation";
+// File path: src/components/layouts/CommonLayout.js
+import React from "react"
 
-function CommonLayout({ children }) {
-  return (
-    <div>
-      <Navigation />
-      <div>
-        <main>{children}</main>
-      </div>
-      <footer>{/* Your footer content */}</footer>
-    </div>
-  );
+function CommonLayout({ children, renderedAt, user }) {
+	return (
+		<div>
+			<p>Rendered at: {renderedAt}</p>
+			{React.Children.map(children, (child) => {
+				// Clone the child component and pass the additional props
+				return React.cloneElement(child, { renderedAt, user })
+			})}
+		</div>
+	)
 }
-export default CommonLayout;
+
+export default CommonLayout
 ```
 
 ### Update `PublicLayout.js`
+
 Paste code into file:
+
 ```javascript
-import CommonLayout from "./CommonLayout";
+import CommonLayout from "./CommonLayout"
 
 function PublicLayout({ children }) {
-  return <CommonLayout>{children}</CommonLayout>;
+	return <CommonLayout>{children}</CommonLayout>
 }
-export default PublicLayout;
+export default PublicLayout
 ```
 
 ### Update `MemberLayout.js`
+
 Paste code into file:
 
 ```javascript
-import { withAuthenticator } from "@aws-amplify/ui-react";
-import CommonLayout from "./CommonLayout";
+// File path: src/components/MemberLayout.js
+import { withAuthenticator } from "@aws-amplify/ui-react"
+import CommonLayout from "./CommonLayout"
 
-function MemberLayoutContent({ children }) {
-  return <CommonLayout>{children}</CommonLayout>;
+function MemberLayoutContent({ children, user, signOut }) {
+	return (
+		<CommonLayout user={user}>
+			<div>
+				<button onClick={signOut}>Sign out</button>
+			</div>
+			{children}
+		</CommonLayout>
+	)
 }
-const MemberLayout = withAuthenticator(MemberLayoutContent);
-export default MemberLayout;
+
+const MemberLayout = withAuthenticator(MemberLayoutContent)
+export default MemberLayout
+
 ```
 
-## Protecting Individual Components
+Now, in `/pages`, create a member folder and put whatever page you want. This is what I have:
+
+```javascript
+function Profile({ user }) {
+	return (
+		<div style={{ padding: 50 }}>
+			<h1>Logged in as {user.username}.</h1>
+			<p>{user.attributes.email}</p>
+			<p>{user.attributes.sub}</p>
+			{console.log(user)}
+		</div>
+	)
+}
+
+export default Profile
+
+```
+
+As you can see, because we passed the user object down the layout tree as props, you have access to all the user data. If your user comments or posts, you can use the `user.attributes.sub` attribute as the immutable and unique user id/key.
+
+Take a look at the console to check out what other information you have access to!
+
+Congratulations, you now have a totally protected `/member` route! You can do this with as many routes as you want.
+
+## Protecting Individual Components not Inside the Protected Route
+
 To protect a specific component, you can use the `withAuthenticator` HOC as shown below:
 
 ```javascript
