--- a/src/posts/0001.md
+++ b/src/posts/0001.md
@@ -1,40 +1,111 @@
 ---
-title: "Setting up a Next 13 app with Amplify and User Authentication"
-date: "2023-09-26"
-tags: ["Next13", "Amplify", "AWS", "JavaScript", "tutorial"]
+title: "AWS Next.js 13 Deployment with Authentication on AWS Amplify"
+date: "2023-10-05"
+tags: ["AWS", "Next.js 13", "Authentication", "AWS Amplify", "Web Development"]
 ---
-## AWS Guide Supplement
+<!-- frontmatter goes above -->
 
----
+<!-- TOC -->
 
-This tutorial serves as a supplement to the official [AWS guide on deploying a Next.js 13 app with authentication to AWS Amplify](https://aws.amazon.com/blogs/mobile/deploy-a-next-js-13-app-with-authentication-to-aws-amplify/). If you've completed up to the third step of the AWS guide and have run
+- [Introduction to AWS Next.js 13 Deployment with Authentication](#introduction-to-aws-nextjs-13-deployment-with-authentication)
+- [Github Repository](#github-repository)
+- [Knowledge That Might Be Helpful](#knowledge-that-might-be-helpful)
+- [Knowledge That You'll Pick Up](#knowledge-that-youll-pick-up)
+- [Things You'll Need](#things-youll-need)
+- [Directory Structure and Path Adjustments](#directory-structure-and-path-adjustments)
+- [Version Control and Repository Setup](#version-control-and-repository-setup)
+- [Conditionally Applying Layouts for Protecting Routes](#conditionally-applying-layouts-for-protecting-routes)
+- [Managing User Data with Context](#managing-user-data-with-context)
+- [Creating Layouts for Use in Protected Routes](#creating-layouts-for-use-in-protected-routes)
+    - [Building the Common Layout Component](#building-the-common-layout-component)
+    - [Crafting the Public Layout](#crafting-the-public-layout)
+    - [Implementing the Member Layout](#implementing-the-member-layout)
+- [Securing Specific Components with withAuthenticator](#securing-specific-components-with-withauthenticator)
+- [Wrapping It Up: A Protected /member Route for Your Next.js 13 App](#wrapping-it-up-a-protected-member-route-for-your-nextjs-13-app)
+- [Additional Resources](#additional-resources)
 
-```
-npm install aws-amplify @aws-amplify/ui-react
-```
+<!-- /TOC -->
 
-you can proceed with the following steps.
+## Introduction to AWS Next.js 13 Deployment with Authentication
+Welcome to this supplement to the official AWS guide on deploying a Next.js 13 app with authentication to AWS Amplify. If you've embarked on this journey of building modern web applications, you're in the right place. In this tutorial, we'll walk you through some essential steps and adjustments that will help you make the most of AWS Amplify while deploying your Next.js 13 app. Let's dive right in.
 
+## Github Repository
+[Vitruvian-Community Repo](https://github.com/zacpaul-wtwg/vitruvian-community)
+
+While the repo includes a lot more code than what is walked-through in the following post, it does include a working version of these concepts. Who knows, there might be other stuff there that you'd want to use!
+
+## Knowledge That Might Be Helpful
+- Basic knowledge of web development concepts.
+- Familiarity with JavaScript and React.
+- Experience with using Node.js and npm.
+
+## Knowledge That You'll Pick Up
+- How to set up directory structure and path adjustments for a Next.js 13 app.
+- Implementing protected routes based on route conditions.
+- Creating a user context for managing user data.
+- Developing layout components for structured application design.
+- Deploying a secure `/member` route and extending protection to other routes.
+- Utilizing AWS Amplify for authentication and serverless app deployment.
+- Interacting with GitHub for version control and repository hosting.
+
+## Things You'll Need
+- A github account
+- An AWS account
+
+<!-- file structure changes go here -->
 ## Directory Structure and Path Adjustments
+**Let's get these file structure changes out of the way first so we can focus on the code.**
 
----
+Create a new file `src/pages/_app.js`
+```bash
+touch src/pages/_app.js
+```
 
-> **Note**: This tutorial recommends using Next.js' `pages/` routing, as it is more widely documented compared to the new `app/` routing method.
+Create a new file `src/pages/index.js`
+```bash
+touch src/pages/index.js
+```
 
-- Delete the `src/app` folder.
-- Create a new file `src/pages/_app.js` and paste the AWS tutorial content into it.
-- Create another new file `src/pages/index.js` and paste the AWS tutorial content into it.
-- Ensure that the import statement for `aws-exports.js` on line 3 of `_app.js` is correct.
-- Create a new file `src/styles/global.css`.
+Create a new file `src/styles/global.css`
+```bash
+touch src/styles/global.css
+```
 
-## Git Setup
+Create a new file `src/contexts/UserContext.js`
+```bash
+touch src/contexts/UserContext.js
+```
 
----
+Create the following layout components:
+```bash
+touch src/components/layouts/CommonLayout.js
+touch src/components/layouts/PublicLayout.js
+touch src/components/layouts/MemberLayout.js
+```
 
-1. Open your terminal and navigate to your project directory.
-2. Initialize a new Git repository with `git init`.
-3. Stage your changes with `git add .`.
-4. Commit your changes with `git commit -m "first commit"`.
+**Delete the src/app folder**
+```bash
+rm -r src/app
+```
+
+<!-- original blog instructional goes here -->
+## Version Control and Repository Setup
+**Open your terminal and navigate to your project directory.**
+
+Initialize a new Git repository with 
+```bash
+git init
+```
+
+Stage your changes with
+```bash
+git add .
+```
+
+Commit your changes with
+```bash
+git commit -m "first commit"
+```
 
 > **GitHub**: For this tutorial, we'll use GitHub. Log in to your GitHub account and create a new repository. Do not include a README or `.gitignore` file.
 
@@ -44,13 +115,11 @@ git branch -M main
 git push -u origin main
 ```
 
-## Implementing Protected Routes
+## Conditionally Applying Layouts for Protecting Routes
 
----
 
 We'll modify the `_app.js` file to conditionally apply layouts based on the route. Routes starting with `/member` will be automatically protected.
 
-### Update `_app.js`
 
 ```javascript
 // File: src/pages/_app.js
@@ -78,64 +147,97 @@ export default MyApp
 
 ```
 
-### Create Layouts
+## Managing User Data with Context
 
-Create the following layout components:
+We want our user data available in a lot of different places. While it would work you just pass props down into every component, let's update our user context so that you can access your user data without having to do so. 
+
+Update `src/contexts/UserContext.js`
 
 ```
-src/components/layouts/CommonLayout.js
-src/components/layouts/PublicLayout.js
-src/components/layouts/MemberLayout.js
+// src/contexts/UserContext.js
+import React, { createContext, useState, useEffect } from "react"
+import { Auth } from "aws-amplify"
+
+export const UserContext = createContext()
+
+export const UserProvider = ({ children }) => {
+	const [user, setUser] = useState(null)
+
+	useEffect(() => {
+		Auth.currentAuthenticatedUser()
+			.then((user) => setUser(user))
+			.catch((err) => console.log(err))
+	}, [])
+
+	return (
+		<UserContext.Provider value={{ user, setUser }}>
+			{children}
+		</UserContext.Provider>
+	)
+}
+
 ```
+## Creating Layouts for Use in Protected Routes
 
-### Update `CommonLayout.js`
 
-Paste code into file:
+### Building the Common Layout Component
+Update `CommonLayout.js`
+
+
 
 ```javascript
 // File path: src/components/layouts/CommonLayout.js
 import React from "react"
+import { UserProvider } from "../../contexts/UserContext"
 
-function CommonLayout({ children, renderedAt, user }) {
+function CommonLayout({ children, renderedAt }) {
 	return (
-		<div>
-			<p>Rendered at: {renderedAt}</p>
-			{React.Children.map(children, (child) => {
-				// Clone the child component and pass the additional props
-				return React.cloneElement(child, { renderedAt, user })
-			})}
-		</div>
+		<UserProvider>
+			<div>
+				<p>Rendered at: {renderedAt}</p>
+				{React.Children.map(children, (child) => {
+					// Clone the child component and pass the additional props
+					return React.cloneElement(child, { renderedAt })
+				})}
+			</div>
+		</UserProvider>
 	)
 }
 
 export default CommonLayout
 ```
 
-### Update `PublicLayout.js`
+### Crafting the Public Layout
+Update `PublicLayout.js`
 
-Paste code into file:
+
 
 ```javascript
+// File path: src/components/layouts/PublicLayout.js
+
 import CommonLayout from "./CommonLayout"
 
 function PublicLayout({ children }) {
 	return <CommonLayout>{children}</CommonLayout>
 }
 export default PublicLayout
+
 ```
 
-### Update `MemberLayout.js`
+### Implementing the Member Layout
 
-Paste code into file:
+Update `MemberLayout.js`
+
+
 
 ```javascript
 // File path: src/components/MemberLayout.js
 import { withAuthenticator } from "@aws-amplify/ui-react"
 import CommonLayout from "./CommonLayout"
 
-function MemberLayoutContent({ children, user, signOut }) {
+function MemberLayoutContent({ children, signOut }) {
 	return (
-		<CommonLayout user={user}>
+		<CommonLayout>
 			<div>
 				<button onClick={signOut}>Sign out</button>
 			</div>
@@ -147,23 +249,30 @@ function MemberLayoutContent({ children, user, signOut }) {
 const MemberLayout = withAuthenticator(MemberLayoutContent)
 export default MemberLayout
 
+
 ```
 
 Now, in `/pages`, create a member folder and put whatever page you want. This is what I have:
 
 ```javascript
-function Profile({ user }) {
+// In Profile.js or any other component
+import { useContext } from "react"
+import { UserContext } from "../../contexts/UserContext"
+
+function Profile() {
+	const { user } = useContext(UserContext)
 	return (
 		<div style={{ padding: 50 }}>
-			<h1>Logged in as {user.username}.</h1>
-			<p>{user.attributes.email}</p>
-			<p>{user.attributes.sub}</p>
+			<h1>Logged in as {user ? user.username : "Loading..."}.</h1>
+			<p>{user ? user.attributes.email : "Loading..."}</p>
+			<p>{user ? user.attributes.sub : "Loading..."}</p>
 			{console.log(user)}
 		</div>
 	)
 }
 
 export default Profile
+
 
 ```
 
@@ -173,7 +282,7 @@ Take a look at the console to check out what other information you have access t
 
 Congratulations, you now have a totally protected `/member` route! You can do this with as many routes as you want.
 
-## Protecting Individual Components not Inside the Protected Route
+## Securing Specific Components with `withAuthenticator`
 
 To protect a specific component, you can use the `withAuthenticator` HOC as shown below:
 
@@ -183,3 +292,23 @@ export default yourProtectedComponent;
 ```
 
 By doing this, you are essentially creating a new component (`yourProtectedComponent`) that includes the authentication functionality. You then export this new component so it can be used in your application.
+
+## Wrapping It Up: A Protected `/member` Route for Your Next.js 13 App
+And there you have it, a fully protected `/member` route and the flexibility to extend this to other routes as well. By creating a user context and utilizing layout components, you've not only secured your application but also made it more maintainable and scalable. Remember to explore the official documentation for Next.js, AWS Amplify, and GitHub to further enhance your skills. Happy coding, and may your web applications thrive!
+
+<!-- additional resources go here -->
+## Additional Resources
+
+- [Official AWS Guide on Deploying a Next.js 13 App with Authentication to AWS Amplify](https://aws.amazon.com/blogs/mobile/deploy-a-next-js-13-app-with-authentication-to-aws-amplify/): The official AWS guide that this blog post serves as a supplement to.
+
+- [Next.js Documentation](https://nextjs.org/docs/getting-started/introduction): Documentation for Next.js, a key technology used in the tutorial.
+
+- [Amplify Documentation](https://docs.amplify.aws/): Documentation for AWS Amplify, a service used for building and deploying full-stack serverless apps.
+
+- [GitHub](https://github.com/): The popular platform mentioned in the blog post for hosting code repositories.
+
+- [GitHub Docs](https://docs.github.com/): Documentation for GitHub, which can be helpful for setting up and managing repositories.
+
+- [React Context API Documentation](https://reactjs.org/docs/context.html): Documentation for React Context API, which is used for creating the user context in the tutorial.
+
+- [AWS Amplify UI Components Documentation](https://docs.amplify.aws/ui): Documentation for the AWS Amplify UI components used in the tutorial for building authentication interfaces.
