light/dark mode

--- a/src/posts/0001.md
+++ b/src/posts/0001.md
@@ -32,7 +32,7 @@ Welcome to this supplement to the official AWS guide on deploying a Next.js 13 a
 ## Github Repository
 [Vitruvian-Community Repo](https://github.com/zacpaul-wtwg/vitruvian-community)
 
-While the repo includes a lot more code than what is walked-through in the following post, it does include a working version of these concepts. Who knows, there might be other stuff there that you'd want to use!
+Although the repository contains more code than what is covered in the subsequent article, it does feature a functional implementation of the discussed concepts. You might even find additional elements in there that could be useful to you!
 
 ## Knowledge That Might Be Helpful
 - Basic knowledge of web development concepts.
